--- a/docs-theme/main.html
+++ b/docs-theme/main.html
@@ -10,10 +10,10 @@
 {% elif page and page.title and not page.is_homepage %}
 <meta
   property="twitter:title"
-  content="{{ page.title }} - {{ config.site_name }}"
+  content="{{ page.title }} - {{ config.title }}"
 />
 {% else %}
-<meta property="twitter:title" content="{{ config.site_name }}" />
+<meta property="twitter:title" content="{{ config.title }}" />
 {% endif %}
 <meta name="twitter:card" content="summary_large_image" />
 <meta
@@ -30,9 +30,18 @@
 {% if page and page.meta and page.meta.title %}
 <meta property="og:title" content="{{ page.meta.title }}" />
 {% elif page and page.title and not page.is_homepage %}
-<meta property="og:title" content="{{ page.title }} - {{ config.site_name }}" />
+<meta property="og:title" content="{{ page.title }} - {{ config.title }}" />
 {% else %}
-<meta property="og:title" content="{{ config.site_name }}" />
+<meta property="og:title" content="{{ config.title }}" />
 {% endif %}
 <meta property="og:description" content="{{ config.site_description }}" />
 {% endblock %}
+
+<!-- Htmltitle -->
+{% block htmltitle %} {% if page and page.meta and page.meta.title %}
+<title>{{ page.meta.title }}</title>
+{% elif page and page.title and not page.is_homepage %}
+<title>{{ page.title | striptags }} - {{ config.title }}</title>
+{% else %}
+<title>{{ config.title }}</title>
+{% endif %} {% endblock %}
